changed helluva ui stuff i love xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Homework Organizer</string>
+    <string name="app_name">Homework Planner</string>
     <string name="action_settings">Settings</string>
 
 
